--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -508,7 +508,7 @@
         "#SDZ_Model_Init = \"\" \n",
         "#SDZ_Models_Dir = \"\" \n",
         "#SDZ_Args = \"\" # @param {type:\"string\"}\n",
-        "SDZ_Extensions = True #@param {type:\"boolean\"}\n",
+        "SDZ_Extensions = False \n",
         "SDZ_ControlNet = True #@param {type:\"boolean\"}\n",
         "SDZ_Upscalers = True #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
@@ -529,7 +529,9 @@
         "    !pip install xformers -r requirements.txt\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_style.css -O web/style.css\n",
-        "    \n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/render_key.js -O web/scripts/render_key.js\n",
+        "    !sed -i '7i\\    <script type=\"text/javascript\" src=\"scripts/render_key.js\"></script>' $SDZ_install'/ComfyUI/web/index.html'\n",
+        "\n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
