--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -45,7 +45,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> \n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/>\n",
         "##@markdown <left><font face='Squired Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n",
         "import os\n",
@@ -102,6 +102,8 @@
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user2.css -O user.css\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
         "    !sed -i 's/\"enable_quantization\": OptionInfo(False/\"enable_quantization\": OptionInfo(True/' $SDZ_install'/stable-diffusion-webui/modules/shared.py'\n",
+        "    !sed -i \"s/                    print(strings.en\\[\\\"SHARE_LINK_MESSAGE\\\"\\])/                    print('\u001b[1;96mSDZ Ready')/\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
+        "    !sed -i \"1452i\\                    print('\u001b[1;90m')\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
         "    \n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
