--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -11,15 +11,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "[![Buy Me a cofee](https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/coffe4.gif?raw=true ) ](https://www.buymeacoffee.com/wilzamguerrero)"
-      ],
-      "metadata": {
-        "id": "gAenW8aqiQA7"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -54,7 +45,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"50\" alt=\"netdata\"/></center></font></a> \n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://www.buymeacoffee.com/wilzamguerrero\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/coffe4.gif?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> \n",
         "##@markdown <left><font face='Squired Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n",
         "import os\n",
@@ -110,7 +101,10 @@
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user2.css -O user.css\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
-        "    \n",
+        "    !sed -i 's/\"enable_quantization\": OptionInfo(False/\"enable_quantization\": OptionInfo(True/' $SDZ_install'/stable-diffusion-webui/modules/shared.py'\n",
+        "    !sed -i \"s/                    print(strings.en\\[\\\"SHARE_LINK_MESSAGE\\\"\\])/                    print('\u001b[1;96mSDZ Ready')/\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
+        "    !sed -i \"1452i\\                    print('\u001b[1;90m')\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
+        "   \n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
@@ -185,7 +179,24 @@
         "    !git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
         "    !git clone https://github.com/alemelis/sd-webui-ar.git\n",
         "    !git clone https://github.com/hnmr293/posex.git\n",
-        "    !git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
+        "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
+        "    #!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
+        "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
+        "    #!git clone https://github.com/s9roll7/ebsynth_utility.git\n",
+        "    #!git clone https://github.com/journey-ad/sd-webui-bilingual-localization.git\n",
+        "    #!git clone https://github.com/hako-mikan/sd-webui-supermerger.git\n",
+        "    #!git clone https://github.com/zero01101/openOutpaint-webUI-extension.git\n",
+        "    #!git clone https://github.com/Bing-su/sd-webui-tunnels.git\n",
+        "    #!git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui.git\n",
+        "    #!git clone https://github.com/bbc-mc/sdweb-xyplus.git\n",
+        "    #!git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git\n",
+        "    #!git clone https://github.com/arenatemp/stable-diffusion-webui-model-toolkit.git\n",
+        "    #!git clone https://github.com/fishslot/video_loopback_for_webui.git\n",
+        "    !git clone https://github.com/etherealxx/batchlinks-webui.git\n",
+        "    !git clone https://github.com/mcmonkeyprojects/sd-dynamic-thresholding.git\n",
+        "    !git clone https://github.com/kohya-ss/sd-webui-additional-networks.git\n",
+        "    #!git clone https://github.com/hnmr293/sd-webui-llul.git\n",
+        "    #!git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
