--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -273,7 +273,7 @@
         "    !git clone https://github.com/alemelis/sd-webui-ar.git\n",
         "    !git clone https://github.com/hnmr293/posex.git\n",
         "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
-        "    !git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
+        "    #!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
         "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
         "    #!git clone https://github.com/s9roll7/ebsynth_utility.git\n",
         "    #!git clone https://github.com/journey-ad/sd-webui-bilingual-localization.git\n",
@@ -284,12 +284,12 @@
         "    #!git clone https://github.com/bbc-mc/sdweb-xyplus.git\n",
         "    #!git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git\n",
         "    #!git clone https://github.com/arenatemp/stable-diffusion-webui-model-toolkit.git\n",
-        "    !git clone https://github.com/fishslot/video_loopback_for_webui.git\n",
+        "    #!git clone https://github.com/fishslot/video_loopback_for_webui.git\n",
         "    !git clone https://github.com/etherealxx/batchlinks-webui.git\n",
-        "    !git clone https://github.com/mcmonkeyprojects/sd-dynamic-thresholding.git\n",
-        "    !git clone https://github.com/kohya-ss/sd-webui-additional-networks.git\n",
-        "    !git clone https://github.com/hnmr293/sd-webui-llul.git\n",
-        "    !git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
+        "    #!git clone https://github.com/mcmonkeyprojects/sd-dynamic-thresholding.git\n",
+        "    #!git clone https://github.com/kohya-ss/sd-webui-additional-networks.git\n",
+        "    #!git clone https://github.com/hnmr293/sd-webui-llul.git\n",
+        "    #!git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
