--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -193,8 +193,8 @@
         "    #!git clone https://github.com/arenatemp/stable-diffusion-webui-model-toolkit.git\n",
         "    #!git clone https://github.com/fishslot/video_loopback_for_webui.git\n",
         "    !git clone https://github.com/etherealxx/batchlinks-webui.git\n",
-        "    !git clone https://github.com/mcmonkeyprojects/sd-dynamic-thresholding.git\n",
-        "    !git clone https://github.com/kohya-ss/sd-webui-additional-networks.git\n",
+        "    #!git clone https://github.com/mcmonkeyprojects/sd-dynamic-thresholding.git\n",
+        "    #!git clone https://github.com/kohya-ss/sd-webui-additional-networks.git\n",
         "    #!git clone https://github.com/hnmr293/sd-webui-llul.git\n",
         "    #!git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
