--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -116,6 +116,7 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
+        "  !pip install fastapi\n",
         "  #!pip install triton\n",
         "  #!pip install triton==2.0.0.dev20221202.\n",
         "  #!git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
@@ -295,9 +296,9 @@
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
-        "    !sed -i 's/max_models = shared.opts.data.get(\"control_net_max_models_num\", 1)/max_models = shared.opts.data.get(\"control_net_max_models_num\", 4)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
-        "    !sed -i 's/1, \"Multi ControlNet/4, \"Multi ControlNet/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
-        "    !sed -i 's/False, \"Allow other script to control this extension/True, \"Allow other script to control this extension/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
+        "    #!sed -i 's/max_models = shared.opts.data.get(\"control_net_max_models_num\", 1)/max_models = shared.opts.data.get(\"control_net_max_models_num\", 4)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
+        "    #!sed -i 's/1, \"Multi ControlNet/4, \"Multi ControlNet/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
+        "    #!sed -i 's/False, \"Allow other script to control this extension/True, \"Allow other script to control this extension/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
         "    %cd sd-webui-controlnet/models\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_canny-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_depth-fp16.safetensors\n",
