--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -397,7 +397,7 @@
         "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
         "    !sed -i \"s@'cpu'@'cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
         "\n",
-        "    !sed -i 's/\"enable_quantization\": OptionInfo(False/\"enable_quantization\": OptionInfo(True/' $SDZ_install'/stable-diffusion-webui/modules/shared.py'\n",
+        "    #!sed -i 's/\"enable_quantization\": OptionInfo(False/\"enable_quantization\": OptionInfo(True/' $SDZ_install'/stable-diffusion-webui/modules/shared.py'\n",
         "    !sed -i \"s/                    print(strings.en\\[\\\"SHARE_LINK_MESSAGE\\\"\\])/                    print('\u001b[1;96mSDZ Ready')/\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
         "    !sed -i \"1452i\\                    print('\u001b[1;90m')\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
         "  else:\n",
