--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -99,7 +99,7 @@
         "\n",
         "    %cd stable-diffusion-webui\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
-        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user2.css -O user.css\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user3.css -O user.css\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
         "   \n",
         "    clear_output()\n",
@@ -116,15 +116,17 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
-        "  !pip install triton\n",
+        "  !pip install gradio\n",
+        "  #!pip install fastapi\n",
+        "  #!pip install triton\n",
         "  #!pip install triton==2.0.0.dev20221202.\n",
         "  #!git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "\n",
         "  #%cd models/Stable-diffusion\n",
-        "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
+        "  #if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
         "    #!pip install xformers==0.0.16rc425\n",
-        "    !pip install open-clip-torch\n",
+        "    #!pip install open-clip-torch\n",
         "\n",
         "# SDZ_Models\n",
         "  os.chdir(SDZ_webui_path)\n",
@@ -165,6 +167,7 @@
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
+        "    !git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
@@ -176,6 +179,7 @@
         "    !git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
         "    !git clone https://github.com/alemelis/sd-webui-ar.git\n",
         "    !git clone https://github.com/hnmr293/posex.git\n",
+        "    !git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
         "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
         "    #!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
         "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
@@ -292,10 +296,6 @@
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "  if SDZ_Big_Models:\n",
-        "    !sed -i 's/\"enable_quantization\": OptionInfo(False/\"enable_quantization\": OptionInfo(True/' $SDZ_install'/stable-diffusion-webui/modules/shared.py'\n",
-        "    !sed -i \"s/                    print(strings.en\\[\\\"SHARE_LINK_MESSAGE\\\"\\])/                    print('\u001b[1;96mSDZ Ready')/\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
-        "    !sed -i \"1452i\\                    print('\u001b[1;90m')\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
-        "\n",
         "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\" $SDZ_webui_path'/modules/sd_models.py'\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
@@ -303,9 +303,7 @@
         "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'\n",
         "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
         "    !sed -i \"s@'cpu'@'cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
-        "  else:\n",
-        "    #!sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
-        "    #!sed -i \"s@map_location='cuda'@map_location='cpu'@\" $SDZ_webui_path'/modules/extras.py'\n",
+        "    !sed -i \"s/                    print(strings.en\\[\\\"SHARE_LINK_MESSAGE\\\"\\])/                    print('\u001b[1;90m')/\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
         "\n",
         "    clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
