--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -75,7 +75,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
-        "share = \"--share --api --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
+        "share = \"--share --api --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --disable-console-progressbars --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "\n",
         "def getLink(path):\n",
         "  with open(path, 'r') as testwritefile:\n",
@@ -99,7 +99,7 @@
         "\n",
         "    %cd stable-diffusion-webui\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
-        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user3.css -O user.css\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user4.css -O user.css\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
         "    \n",
         "    clear_output()\n",
@@ -260,7 +260,7 @@
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
-        "    !git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
+        "    #!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
@@ -393,12 +393,11 @@
         "\n",
         "  if SDZ_Big_Models:\n",
         "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\" $SDZ_webui_path'/modules/sd_models.py'\n",
-        "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
-        "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
-        "    !sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
         "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'\n",
-        "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
-        "    !sed -i \"s@'cpu'@'cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
+        "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
+        "    #!sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
+        "    #!sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
+        "    #!sed -i \"s@'cpu'@'cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
         "    !sed -i \"s/                    print(strings.en\\[\\\"SHARE_LINK_MESSAGE\\\"\\])/                    print('\u001b[1;90m')/\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
         "\n",
         "    clear_output()\n",
