--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -99,7 +99,7 @@
         "\n",
         "    %cd stable-diffusion-webui\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
-        "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user3.css -O user.css\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user4.css -O user.css\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
         "   \n",
         "    clear_output()\n",
@@ -167,7 +167,6 @@
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
-        "    #!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
