--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -98,7 +98,7 @@
         "      !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
         "\n",
         "    %cd stable-diffusion-webui\n",
-        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "    #!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user4.css -O user.css\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
         "    \n",
@@ -418,7 +418,6 @@
         "    !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "p0WPkwREmtD3"
       },
       "execution_count": null,
