--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -418,6 +418,7 @@
         "    !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "p0WPkwREmtD3"
       },
       "execution_count": null,
