--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -116,6 +116,7 @@
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "  !pip install gradio\n",
+        "  !pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 -f https://download.pytorch.org/whl/cu117/torch_stable.html\n",
         "  #!pip install fastapi\n",
         "  #!pip install triton\n",
         "  #!pip install triton==2.0.0.dev20221202.\n",
