--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -206,6 +206,7 @@
         "    %cd extensions\n",
         "    !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
         "    %cd sd-webui-controlnet/models\n",
+        "    !wget --timestamping https://huggingface.co/CrucibleAI/ControlNetMediaPipeFace/resolve/main/control_mediapipe_face_sd15_v2.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_canny-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_depth-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_hed-fp16.safetensors\n",
