--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -435,22 +435,90 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "p0WPkwREmtD3",
-        "outputId": "14452ffa-949a-41cc-c483-0e2749b178af",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "p0WPkwREmtD3"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Interrupted with signal 2 in <frame at 0xd4b18d10, file '/content/stable-diffusion-webui/webui.py', line 209, code wait_on_server>\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Download"
+      ],
+      "metadata": {
+        "id": "cy0jcqWDQ_oi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Download Custom Model\n",
+        "import os\n",
+        "%store -r\n",
+        "\n",
+        "os.chdir(root_dir)\n",
+        "\n",
+        "#@markdown ### Custom model\n",
+        "modelUrl = \"https://huggingface.co/uwg/model_loraz/tree/main/output_zpaotruzz_150423\" #@param {'type': 'string'}\n",
+        "\n",
+        "def install(url):\n",
+        "  base_name = os.path.basename(url)\n",
+        "\n",
+        "  if url.startswith(\"https://drive.google.com\"):\n",
+        "    os.chdir(pretrained_model)\n",
+        "    !gdown --fuzzy {url}\n",
+        "  elif url.startswith(\"https://huggingface.co/\"):\n",
+        "    if '/blob/' in url:\n",
+        "      url = url.replace('/blob/', '/resolve/')\n",
+        "\n",
+        "    hf_token = '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' #@param {type:\"string\"}\n",
+        "    user_header = f\"\\\"Authorization: Bearer {hf_token}\\\"\"\n",
+        "    !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
+        "  else:\n",
+        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "\n",
+        "install(modelUrl)\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "gL8_b6GB242q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown <left><img src='https://icons.iconarchive.com/icons/flat-icons.com/square/256/pill-icon.png' height=\"50\" alt=\"netdata\"/> Download Repository\n",
+        "%%capture\n",
+        "from IPython.display import clear_output\n",
+        "import os\n",
+        "save_repository = \"/content/drive/MyDrive/AI/Modelz\" #@param {type:\"string\"}\n",
+        "os.chdir(save_repository)\n",
+        "!pip install happytransformer\n",
+        "!pip install huggingface_hub\n",
+        "url = \"huggingface.co/uwg/modelz5z\" #@param {type:\"string\"}\n",
+        "user = \"uwg\" #@param {type:\"string\"}\n",
+        "token = \"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\" #@param {type:\"string\"}\n",
+        "!git lfs install\n",
+        "!git clone https://$user:$token@$url\n",
+        "print('\u001b[1;32mDONE !')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "9BHm07oeP6Te"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "sEMZ9jR2RHfb"
+      }
     },
     {
       "cell_type": "code",
@@ -851,43 +919,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#Download Custom Model\n",
-        "import os\n",
-        "%store -r\n",
-        "\n",
-        "os.chdir(root_dir)\n",
-        "\n",
-        "#@markdown ### Custom model\n",
-        "modelUrl = \"https://civitai.com/api/download/models/5036?type=VAE\" #@param {'type': 'string'}\n",
-        "\n",
-        "def install(url):\n",
-        "  base_name = os.path.basename(url)\n",
-        "\n",
-        "  if url.startswith(\"https://drive.google.com\"):\n",
-        "    os.chdir(pretrained_model)\n",
-        "    !gdown --fuzzy {url}\n",
-        "  elif url.startswith(\"https://huggingface.co/\"):\n",
-        "    if '/blob/' in url:\n",
-        "      url = url.replace('/blob/', '/resolve/')\n",
-        "\n",
-        "    hf_token = '' #@param {type:\"string\"}\n",
-        "    user_header = f\"\\\"Authorization: Bearer {hf_token}\\\"\"\n",
-        "    !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
-        "  else:\n",
-        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
-        "\n",
-        "install(modelUrl)\n"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "gL8_b6GB242q"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
         "from IPython.display import clear_output\n",
@@ -1178,6 +1209,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
