--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -455,17 +455,18 @@
         "#Download Custom Model\n",
         "import os\n",
         "%store -r\n",
-        "\n",
+        "root_dir = \"/content/sample_data\" #@param {'type': 'string'}\n",
         "os.chdir(root_dir)\n",
         "\n",
-        "#@markdown ### Custom model\n",
-        "modelUrl = \"https://huggingface.co/uwg/model_loraz/tree/main/output_zpaotruzz_150423\" #@param {'type': 'string'}\n",
+        "modelUrl = \"https://huggingface.co/uwg/model_loraz/blob/main/output_zpaotruzz_150423/zpaotruzz_dlib2.safetensors\" #@param {'type': 'string'}\n",
+        "\n",
+        "!apt-get install aria2\n",
         "\n",
         "def install(url):\n",
         "  base_name = os.path.basename(url)\n",
         "\n",
         "  if url.startswith(\"https://drive.google.com\"):\n",
-        "    os.chdir(pretrained_model)\n",
+        "    os.chdir(root_dir)\n",
         "    !gdown --fuzzy {url}\n",
         "  elif url.startswith(\"https://huggingface.co/\"):\n",
         "    if '/blob/' in url:\n",
@@ -473,9 +474,9 @@
         "\n",
         "    hf_token = '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' #@param {type:\"string\"}\n",
         "    user_header = f\"\\\"Authorization: Bearer {hf_token}\\\"\"\n",
-        "    !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
+        "    !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {root_dir} -o {base_name} {url}\n",
         "  else:\n",
-        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {root_dir} {url}\n",
         "\n",
         "install(modelUrl)\n"
       ],
