--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -452,13 +452,145 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title ## 7.1. Upload Config\n",
+        "from huggingface_hub import login\n",
+        "from huggingface_hub import HfApi\n",
+        "from huggingface_hub.utils import validate_repo_id, HfHubHTTPError\n",
+        "\n",
+        "# @markdown Login to Huggingface Hub\n",
+        "# @markdown > Get **your** huggingface `WRITE` token [here](https://huggingface.co/settings/tokens)\n",
+        "write_token = \"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\"  # @param {type:\"string\"}\n",
+        "# @markdown Fill this if you want to upload to your organization, or just leave it empty.\n",
+        "orgs_name = \"\"  # @param{type:\"string\"}\n",
+        "# @markdown If your model/dataset repo does not exist, it will automatically create it.\n",
+        "model_name = \"model_loraz/blob/main/output_zpaotruzz_150423\"  # @param{type:\"string\"}\n",
+        "dataset_name = \"uwg\"  # @param{type:\"string\"}\n",
+        "make_private = False  # @param{type:\"boolean\"}\n",
+        "\n",
+        "def authenticate(write_token):\n",
+        "    login(write_token, add_to_git_credential=True)\n",
+        "    api = HfApi()\n",
+        "    return api.whoami(write_token), api\n",
+        "\n",
+        "\n",
+        "def create_repo(api, user, orgs_name, repo_name, repo_type, make_private=False):\n",
+        "    global model_repo\n",
+        "    global datasets_repo\n",
+        "    \n",
+        "    if orgs_name == \"\":\n",
+        "        repo_id = user[\"name\"] + \"/\" + repo_name.strip()\n",
+        "    else:\n",
+        "        repo_id = orgs_name + \"/\" + repo_name.strip()\n",
+        "\n",
+        "    try:\n",
+        "        validate_repo_id(repo_id)\n",
+        "        api.create_repo(repo_id=repo_id, repo_type=repo_type, private=make_private)\n",
+        "        print(f\"{repo_type.capitalize()} repo '{repo_id}' didn't exist, creating repo\")\n",
+        "    except HfHubHTTPError as e:\n",
+        "        print(f\"{repo_type.capitalize()} repo '{repo_id}' exists, skipping create repo\")\n",
+        "    \n",
+        "    if repo_type == \"model\":\n",
+        "        model_repo = repo_id\n",
+        "        print(f\"{repo_type.capitalize()} repo '{repo_id}' link: https://huggingface.co/{repo_id}\\n\")\n",
+        "    else:\n",
+        "        datasets_repo = repo_id\n",
+        "        print(f\"{repo_type.capitalize()} repo '{repo_id}' link: https://huggingface.co/datasets/{repo_id}\\n\")\n",
+        "\n",
+        "user, api = authenticate(write_token)\n",
+        "\n",
+        "if model_name:\n",
+        "    create_repo(api, user, orgs_name, model_name, \"model\", make_private)\n",
+        "if dataset_name:\n",
+        "    create_repo(api, user, orgs_name, dataset_name, \"dataset\", make_private)\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "eX-BathTw3v-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title ### 7.2.1. Upload LoRA\n",
+        "from huggingface_hub import HfApi\n",
+        "from pathlib import Path\n",
+        "\n",
+        "%store -r\n",
+        "\n",
+        "api = HfApi()\n",
+        "\n",
+        "# @markdown This will be uploaded to model repo\n",
+        "model_path = \"/content/LoRA/output\"  # @param {type :\"string\"}\n",
+        "path_in_repo = \"\"  # @param {type :\"string\"}\n",
+        "\n",
+        "# @markdown Now you can save your config file for future use\n",
+        "config_path = \"/content/LoRA/config\"  # @param {type :\"string\"}\n",
+        "\n",
+        "# @markdown Other Information\n",
+        "commit_message = \"\"  # @param {type :\"string\"}\n",
+        "\n",
+        "if not commit_message:\n",
+        "    commit_message = f\"feat: upload {project_name} lora model\"\n",
+        "\n",
+        "def upload_to_hf(model_path, is_folder, is_config):\n",
+        "    path_obj = Path(model_path)\n",
+        "    trained_model = path_obj.parts[-1]\n",
+        "\n",
+        "    if path_in_repo:\n",
+        "        trained_model = path_in_repo\n",
+        "\n",
+        "    if is_config:\n",
+        "        trained_model = f\"{project_name}_config\"\n",
+        "\n",
+        "    print(f\"Uploading {trained_model} to https://huggingface.co/{model_repo}\")\n",
+        "    print(\"Please wait...\")\n",
+        "\n",
+        "    if is_folder:\n",
+        "        api.upload_folder(\n",
+        "            folder_path=model_path,\n",
+        "            path_in_repo=trained_model,\n",
+        "            repo_id=model_repo,\n",
+        "            commit_message=commit_message,\n",
+        "            ignore_patterns=\".ipynb_checkpoints\",\n",
+        "        )\n",
+        "        print(f\"Upload success, located at https://huggingface.co/{model_repo}/tree/main\\n\")\n",
+        "    else:\n",
+        "        api.upload_file(\n",
+        "            path_or_fileobj=model_path,\n",
+        "            path_in_repo=trained_model,\n",
+        "            repo_id=model_repo,\n",
+        "            commit_message=commit_message,\n",
+        "        )\n",
+        "        print(f\"Upload success, located at https://huggingface.co/{model_repo}/blob/main/{trained_model}\\n\")\n",
+        "\n",
+        "def upload():\n",
+        "    is_model_file = model_path.endswith((\".ckpt\", \".safetensors\", \".pt\"))\n",
+        "    upload_to_hf(model_path, not is_model_file, False)\n",
+        "\n",
+        "    if config_path:\n",
+        "        upload_to_hf(config_path, True, True)\n",
+        "\n",
+        "upload()\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "q4dfYdUow7XS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#Download Custom Model\n",
         "import os\n",
         "%store -r\n",
         "root_dir = \"/content/sample_data\" #@param {'type': 'string'}\n",
         "os.chdir(root_dir)\n",
         "\n",
-        "modelUrl = \"https://huggingface.co/uwg/model_loraz/blob/main/output_zpaotruzz_150423/zpaotruzz_dlib2.safetensors\" #@param {'type': 'string'}\n",
+        "modelUrl = \"https://huggingface.co/uwg/model_loraz/blob/main/output_zpaotruzz_150423/pao513.zip\" #@param {'type': 'string'}\n",
         "\n",
         "!apt-get install aria2\n",
         "\n",
@@ -483,6 +615,54 @@
       "metadata": {
         "cellView": "form",
         "id": "gL8_b6GB242q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title <center>Comprimir\n",
+        "#@markdown <center><img src='https://cdn3.iconfinder.com/data/icons/package-and-boxes/100/box_package-15-512.png' height=\"50\" alt=\"netdata\"/></center>\n",
+        "import os, sys, re\n",
+        "\n",
+        "folder_path = \"/content/drive/Shareddrives/Data13/zdream/train/sofff2_out\" #@param {type:\"string\"}\n",
+        "archiving_method = 'zip' #@param [\"zip\", \"7z\" ]\n",
+        "\n",
+        "output_file_path = re.search(\"^[\\/].+\\/\", folder_path)\n",
+        "output_file_path_raw = output_file_path.group(0)\n",
+        "delsplit = re.search(\"\\/(?:.(?!\\/))+$\", folder_path)\n",
+        "folder_name = re.sub(\"^[\\/]\", \"\", delsplit.group(0))\n",
+        "\n",
+        "os.environ['inputDir'] = folder_path\n",
+        "os.environ['outputPath'] = output_file_path_raw\n",
+        "os.environ['folderName'] = folder_name\n",
+        "\n",
+        "if archiving_method == 'zip':\n",
+        "   !7z a -tzip \"$outputPath\"/\"$folderName\".zip \"$inputDir\"\n",
+        "\n",
+        "if archiving_method == '7z':\n",
+        "   !7z a -t7z -m0=lzma -mx=9 -mfb=258 -md=32m -ms=on \"$outputPath\"/\"$folderName\".7z \"$inputDir\""
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "pQ2B3Wz5mRsf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title <center>Descomprimir Zip\n",
+        "#@markdown <center><img src='https://cdn3.iconfinder.com/data/icons/package-and-boxes/100/box_package-14-512.png' height=\"50\" alt=\"netdata\"/></center>\n",
+        "Zip_archivo = \"/content/sample_data/pao513.zip\" #@param {type:\"string\"}\n",
+        "Descomprimir = \"/content/513\" #@param {type:\"string\"}\n",
+        "!unzip \"$Zip_archivo\" -d \"$Descomprimir\""
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "B5O6hDnSmT3E"
       },
       "execution_count": null,
       "outputs": []
@@ -1210,7 +1390,6 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
