--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -59,7 +59,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.Deliberate_2\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\"]\n",
+        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.Deliberate_2\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.Clarity_20\",\"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV20\", \"V1.5.AnalogMadnessV30\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\", \"V1.5.Level4_v50\", \"V1.5.Degenerate_v10\", \"V1.5.LazyMix\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
@@ -165,7 +165,7 @@
         "    !wget --timestamping https://civitai.com/api/download/models/15236 -O 15Deliberate_2.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.URPM\":\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/4971 -O 15URPM.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/15640 -O 15URPM.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.RL114\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/9954 -O 15RL114.safetensors\n",
@@ -203,6 +203,9 @@
         "  elif SDZ_Download_Model == \"V1.5.Clarity_19\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/13128 -O 15clarity_19.safetensors\n",
         "\n",
+        "  elif SDZ_Download_Model == \"V1.5.Clarity_20\":\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/34070 -O 15clarity_20.safetensors\n",
+        "\n",
         "  elif SDZ_Download_Model == \"V1.5.TsXxx_v10\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/14225 -O 15tsXxx_v10.safetensors\n",
         "  \n",
@@ -233,8 +236,11 @@
         "  elif SDZ_Download_Model == \"V1.5.ConsistentFactor444p_v10\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/10773 -O 15consistentFactor444p_v10.safetensors\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.AnalogMadnessV11\":\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/9519 -O 15analogMadnessV11.safetensors\n",
+        "  elif SDZ_Download_Model == \"V1.5.AnalogMadnessV20\":\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/21176 -O 15analogMadnessV20.safetensors\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.AnalogMadnessV30\":\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/30227 -O 15analogMadnessV30.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.abyssorangemix2_Hard\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/5038 -O abyssorangemix2_Hard.safetensors\n",
@@ -243,6 +249,16 @@
         "  elif SDZ_Download_Model == \"V1.5.abyssorangemix2_NSFW\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/5036 -O abyssorangemix2NSFW.safetensors.safetensors\n",
         "    !wget --timestamping https://civitai.com/api/download/models/5036?type=VAE -O orangemix.vae.pt\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.Level4_v50\":\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/25295 -O 15Level4_v50.safetensors\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.Degenerate_v10\":\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/33285 -O 15Degenerate_v10.safetensors\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.LazyMix\":\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/12996 -O 15LazyMix.safetensors\n",
+        "\n",
         "\n",
         "  else:\n",
         "    SDZ_Download_Model == \"\"\n",
